--- a/TP2/Relatório/refs.bib
+++ b/TP2/Relatório/refs.bib
@@ -1,7 +1,21 @@
+@online{bind9documentation,
+  title = {BIND9 Administrator Reference Manual},
+  year = {2023},
+  url = {https://bind9.readthedocs.io/en/latest/index.html},
+  note = {Accessed on December 1, 2023}
+}
+
+@book{computerNetworking,
+  title = {Computer Networking: A Top-Down Approach},
+  author = {Jim Kurose and Keith Ross},
+  year = {2020},
+  edition = {8th},
+}
+
 @online{BitTorrent,
   title = {uTorrent transport protocol},
   author = {Arvid Norberg},
   year = {2009},
-  url = {https://web.archive.org/web/20161228180615/http://www.bittorrent.org:80/beps/bep_0029.html},
+  url = {http://www.bittorrent.org/beps/bep_0029.html},
   note = {Accessed on November 13, 2023}
 }
